# DHCPMonitor

./: .gitattributes  .gitignore  LICENSE  README.md  SCRIPTS.md  STRUCTURE.md  build.bat  build.sh  e 1.1.25 - Fix artifacts upload (bundle only)  elevate.vbs  index.html  install.bat  package-lock.json  package.json  postcss.config.js  start.bat  start.sh  tailwind.config.js  tauri.conf.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
config/: tailwind.config.js  tsconfig.json  tsconfig.node.json
docs/: STRUCTURE.md
portable/: README.txt
release/: DHCP Monitor Pro_0.0.0_x64_en-US.msi  README.md
scripts/: README.md  build-macos.sh  build.bat  create-portable.bat  start.bat
src/: App.tsx  index.css
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.build.json  tauri.conf.json
src-tauri/icons/: create_icns.py  create_ico.py  create_png_icons.py  icon.icns
src-tauri/src/: dhcp_capture.rs  main.rs  network_interfaces.rs
src/components/: LogsView.tsx  NetworkView.tsx  Option50View.tsx  PacketDetails.tsx  SettingsView.tsx
src/types/: index.ts
