[package]
name = "dhcp-monitor"
version = "1.1.37"
description = "DHCP Monitor - Option 50 Tracker"
authors = ["iyotee"]
license = "MIT"
repository = "https://github.com/iyotee/DHCPMonitor"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
pcap = "1.3"
libloading = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
